--- a/src/components/Bar.astro
+++ b/src/components/Bar.astro
@@ -1,15 +1,19 @@
+---
+
+---
+
 <div class="px-container h-12 bg-accent fixed inset-x-0 bottom-0 flex justify-around md:justify-end md:bottom-auto md:top-0 md:h-10">
   <div class="aspect-square flex justify-center items-center">
 1
   </div>
   <div class="aspect-square flex justify-center items-center">
-2
+    <div class="i-lucide-printer text-xl"></div>
   </div>
   <div class="aspect-square flex justify-center items-center">
-3
+    <button class="i-lucide-download text-xl"></button>
   </div>
   <div class="aspect-square flex justify-center items-center">
-4
+    <div class="i-lucide-moon text-xl"></div>
+    <div class="i-lucide-sun text-xl"></div>
   </div>
 </div>
-
