--- a/src/components/Bar.astro
+++ b/src/components/Bar.astro
@@ -10,7 +10,7 @@
     <div class="i-lucide-printer text-xl"></div>
   </div>
   <div class="aspect-square flex justify-center items-center">
-    <button class="i-lucide-download text-xl"></button>
+    <button class="i-lucide-download text-xl" aria-label="Theme button"></button>
   </div>
   <div class="aspect-square flex justify-center items-center">
     <div class="i-lucide-moon text-xl"></div>
