--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -37,7 +37,7 @@ const collection = pages.find((page) => page.id.split("/")[0] === lang)?.data;
           <SkillsSection {...collection.skills} />
           <EducationSection {...collection.education} />
           <WorksSection {...collection.works} />
-          <AdditionalSection {...collection.aditional} />
+          <AdditionalSection {...collection.additional} />
         </main>
         
         <Bar />
