--- a/src/components/AdditionalSection.astro
+++ b/src/components/AdditionalSection.astro
@@ -9,5 +9,5 @@ const { title, text, link } = Astro.props;
 
 <Section title={title} >
   <p>{text}</p>
-  <a href={link.href}>{link.name}</a>
+  {link && <a href={link.href}>{link.name}</a>}
 </Section>
