--- a/src/components/ContactsSection.astro
+++ b/src/components/ContactsSection.astro
@@ -6,17 +6,16 @@
 
 import type { CollectionEntry } from "astro:content";
 import Section from "./ui/Section.astro";
-import { onMount } from 'astro';
 
 type Props = CollectionEntry<"main">["data"]["contacts"];
 
-const { title, ariaLabel, links } = Astro.props;
+const { ariaLabel, links } = Astro.props;
 ---
 
-<Section title={title} ariaLabel={ariaLabel} className="-mt-8">
+<Section ariaLabel={ariaLabel} className="-mt-8">
   <div class="flex flex-wrap gap-y-2 gap-x-4">
     {links.map((link) => (
-      <a href={link.href} title={link.title} class="flex items-center gap-x-[0.4em] group">
+      <a href={link.href} title={link.title} class="flex items-center gap-x-[0.4em] group py-3 md:py-1">
         <div class=`${link.icon} text-xl group-hover:text-primary`></div> {link.text}
       </a> 
     ))}
