--- a/src/components/WorksSection.astro
+++ b/src/components/WorksSection.astro
@@ -4,26 +4,25 @@ import Section from "./ui/Section.astro";
 import SkillList from "./ui/SkillList.astro";
 import AdditionalsList from "./ui/AdditionalsList.astro";
 
-
 type Props = CollectionEntry<"main">["data"]["works"];
 
 const { title, list } = Astro.props;
-
 ---
 
-<Section title={title} >
+<Section title={title}>
 	<ul class="grid gap-y-6 md:gap-y-8">
 	  {list.map((work) => {
-	  	const { position, years, additionals, skills } = work;
+	  	const { name, position, years, additionals, skills } = work;
 	  	return (
 		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr]">
 		  		<div>
-		  			<h3 class="font-bold uppercase">{position}</h3>
+		  			<h3 class="font-bold uppercase">{name}</h3>
 		  			<p>{years}</p>
 		  		</div>
 		  		<div class="grid gap-y-2 md:gap-y-1">
+		  			<h3 class="font-bold">{position}</h3>
 		  			<AdditionalsList list={additionals} />
-		  			<div class="ml-[0.85rem] mt-2">
+		  			<div class=" mt-2">
 		  				<h4>{skills.title}</h4>
 		  				<SkillList skills={skills.list} className="mt-1" />
 		  			</div>
