--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -17,7 +17,7 @@ const pages = await getCollection("main");
 const collection = pages.find((page) => page.id.split("/")[0] === lang)?.data;
 ---
 
-<html lang="en" class="text-[90%] md:text-[100%]">
+<html lang="en" class="safe-area bg-background text-foreground text-[90%] md:text-[100%]">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -26,7 +26,7 @@ const collection = pages.find((page) => page.id.split("/")[0] === lang)?.data;
     <meta name="description" content="astro" />
     <title>Astro</title>
   </head>
-  <body class="safe-area light bg-background text-foreground">
+  <body>
     {
       collection && (
         <HeroSection {...collection.hero} />
@@ -45,3 +45,21 @@ const collection = pages.find((page) => page.id.split("/")[0] === lang)?.data;
     }
   </body>
 </html>
+
+<style>
+html {
+  color-scheme: light;
+}
+
+@media (prefers-color-scheme: dark) {
+  html{
+    background-color: ;
+  }
+}
+
+html.dark {
+  color-scheme: dark;
+}
+
+  
+</style>
