page bar, language select, refactor structure

--- a/src/components/sections/AdditionalSection.astro
+++ b/src/components/sections/AdditionalSection.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Section from "./ui/Section.astro";
+import Section from "../ui/Section.astro";
 
 type Props = CollectionEntry<"main">["data"]["additional"];
 
