--- a/src/components/sections/EducationSection.astro
+++ b/src/components/sections/EducationSection.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Section from "./ui/Section.astro";
-import AdditionalsList from "./ui/AdditionalsList.astro";
+import Section from "../ui/Section.astro";
+import AdditionalsList from "../ui/AdditionalsList.astro";
 
 type Props = CollectionEntry<"main">["data"]["education"];
 
@@ -15,11 +15,11 @@ const { title, list } = Astro.props;
 	  	return (
 		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr]">
 		  		<div>
-		  			<h3 class="font-bold uppercase">{name}</h3>
+		  			<h3 class="font-semibold uppercase">{name}</h3>
 		  			<p>{years}</p>
 		  		</div>
 		  		<div class="grid gap-y-2 md:gap-y-1">
-		  			<h4 class="font-bold">{degree}</h4>
+		  			<h4 class="font-semibold">{degree}</h4>
 		  			<AdditionalsList list={additionals} />
 		  		</div>
 		  	</li>
