--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -41,20 +41,21 @@ const themePreference = (storageKey) => {
 
   return {
     togglePreference,
+    themeState
   }
 }
 
 const theme = themePreference('theme-preference', 'theme-toggle');
 
 document.addEventListener('DOMContentLoaded', () => {
-  const btn = document.getElementById('theme-toggle');
-  if (btn) btn.onclick = () => theme.togglePreference();
+  document.getElementById('theme-toggle')?.addEventListener('click', function(){
+    theme.togglePreference();
+    this.setAttribute('aria-label', theme.themeState === 'dark' ? 'Turn light theme' : 'Turn dark theme');
+  })
 })
 
 </script>
 
-<button 
-	id="theme-toggle" 
-	aria-label="auto" 
-	class="text-xl light:i-lucide-moon dark:i-lucide-sun text-foreground"
-></button>
+<button id="theme-toggle" aria-label="auto" class="w-full h-full flex items-center justify-center">
+  <span class="text-xl dark:i-lucide-moon light:i-lucide-sun text-foreground "></span>
+</button>
