--- a/src/components/sections/SkillsSection.astro
+++ b/src/components/sections/SkillsSection.astro
@@ -1,6 +1,6 @@
 ---
-import Section from "./ui/Section.astro";
-import SkillList from "./ui/SkillList.astro";
+import Section from "../ui/Section.astro";
+import SkillList from "../ui/SkillList.astro";
 import type { CollectionEntry } from "astro:content";
 
 type Props = CollectionEntry<"main">["data"]["skills"];
@@ -12,7 +12,7 @@ const { title, list } = Astro.props;
   <div class="grid gap-y-6">
     {list.map((item) => (
       <div class="grid gap-y-2">
-        <h3>{item.title}</h3>
+        <h3 class="font-semibold">{item.title}</h3>
         <SkillList skills={item.list} />
       </div>
     ))}    
