--- a/src/components/sections/WorksSection.astro
+++ b/src/components/sections/WorksSection.astro
@@ -1,8 +1,8 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import Section from "./ui/Section.astro";
-import SkillList from "./ui/SkillList.astro";
-import AdditionalsList from "./ui/AdditionalsList.astro";
+import Section from "../ui/Section.astro";
+import SkillList from "../ui/SkillList.astro";
+import AdditionalsList from "../ui/AdditionalsList.astro";
 
 type Props = CollectionEntry<"main">["data"]["works"];
 
@@ -16,14 +16,14 @@ const { title, list } = Astro.props;
 	  	return (
 		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr]">
 		  		<div>
-		  			<h3 class="font-bold uppercase">{name}</h3>
+		  			<h3 class="font-semibold uppercase">{name}</h3>
 		  			<p>{years}</p>
 		  		</div>
 		  		<div class="grid gap-y-2 md:gap-y-1">
-		  			<h3 class="font-bold">{position}</h3>
+		  			<h3 class="font-semibold">{position}</h3>
 		  			<AdditionalsList list={additionals} />
 		  			<div class=" mt-2">
-		  				<h4>{skills.title}</h4>
+		  				<h4 class="text-sm">{skills.title}</h4>
 		  				<SkillList skills={skills.list} className="mt-1" />
 		  			</div>
 		  		</div>
