--- a/src/components/sections/PageFooter.astro
+++ b/src/components/sections/PageFooter.astro
@@ -5,7 +5,7 @@ type Props = CollectionEntry<"main">["data"]["footer"];
 
 const year = new Date().getFullYear();
 
-const { developer, license, link } = Astro.props;
+const { developer, license } = Astro.props;
 ---
 
 <footer class="px-container pt-20 pb-8 text-xs text-mute md:grid md:grid-cols-[1fr_4fr] md:gap-x-1.5rem">
