--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -21,7 +21,7 @@ const collection = pages.find((page) => page.id.split("/")[0] === locale)?.data;
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="astro" />
     <title>Astro</title>
