print styles, optimized classes

--- a/src/components/LangSelect.astro
+++ b/src/components/LangSelect.astro
@@ -25,7 +25,7 @@ const links = [
   <button
     id="lang-button"
     type="button"
-    class="w-full h-full font-semibold text-center md:rounded capitalize group-[.is-open]:bg-border"
+    class="w-full h-full font-semibold text-center md:rounded capitalize group-[.is-open]:bg-border pt-0.5"
   >
     {locale}
   </button>
