--- a/src/components/PrintBtn.astro
+++ b/src/components/PrintBtn.astro
@@ -1,3 +1,7 @@
 ---
 ---
-<div class="i-lucide-printer text-xl"></div>
+<script>
+  document.getElementById('print-btn')?.addEventListener('click', ()=> window.print());
+</script>
+
+<button id="print-btn" class="text-xl i-lucide-printer"></button>
