--- a/src/components/ui/SkillList.astro
+++ b/src/components/ui/SkillList.astro
@@ -7,10 +7,15 @@ interface Props {
 const { skills, className } = Astro.props;
 ---
 
-<ul class:list={[ "flex flex-wrap gap-x-2 gap-y-2", className && className]}>
-	{skills.map((skill) => (
-		<li class="bg-backplate whitespace-nowrap text-sm py-1 px-2 rounded-sm">
-			{skill}
-		</li>
+<ul class:list={[ 
+	"flex flex-wrap gap-x-2 gap-y-2", 
+	"print:gap-y-0.5",
+	className && className]}>
+	{skills.map((skill, index) => (
+		<li class:list={[
+			"bg-backplate whitespace-nowrap text-normal py-1 px-2 rounded-sm",
+			"print:(p-0 )",
+			(index != skills.length - 1) && "after:content-[',']"
+		]}>{skill}</li>
 	))}
 </ul>
