--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -7,13 +7,20 @@ type Props = CollectionEntry<"main">["data"]["hero"];
 const { fullname, position } = Astro.props;
 ---
 
-<header class="pt-10 pb-8 px-container md:grid md:grid-cols-[1fr_4fr] md:gap-x-1.5rem md:pt-20 md:pb-16 items-center">
-  <div class="md:col-start-2 md:col-end-3 md:grid grid-cols-[1fr_auto] md:items-center">
-    <h1 class="md:col-start-1 md:col-end-2 text-4xl md:text-5xl font-bold leading-snug md:leading-normal bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent">{fullname}</h1>
-    <p class="md:col-start-1 md:col-end-2 font-bold">{position}</p>
-    <div class="md:col-start-2 md:col-end-3 md:row-start-1">
+<header class:list={[
+  "pt-10 pb-8 px-container",
+  "md:(grid grid-cols-[1fr_4fr] gap-x-1.5rem pt-20 pb-16 items-center)",
+  "print:(pb-4)"
+]}>
+  <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto] items-center)">
+    <h1 class:list={[
+      "text-4xl font-bold leading-snug bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent",
+      "md:(col-start-1 col-end-2 text-5xl leading-normal)",
+      "print:(text-2xl)"
+    ]}>{fullname}</h1>
+    <p class="font-bold md:(col-start-1 col-end-2) print:(text-sm)">{position}</p>
+    <div class="md:(col-start-2 col-end-3 row-start-1) print:hidden">
       <BarHero />
     </div>
   </div>
- 
 </header>
