--- a/src/components/sections/SkillsSection.astro
+++ b/src/components/sections/SkillsSection.astro
@@ -9,10 +9,10 @@ const { title, list } = Astro.props;
 ---
 
 <Section title={title} >
-  <div class="grid gap-y-6">
+  <div class="grid gap-y-6 print:gap-y-1">
     {list.map((item) => (
-      <div class="grid gap-y-2">
-        <h3 class="font-semibold">{item.title}</h3>
+      <div class="grid gap-y-2 print:gap-1 print:flex">
+        <h3 class="font-semibold print:print:text-sm whitespace-nowrap">{item.title}</h3>
         <SkillList skills={item.list} />
       </div>
     ))}    
