--- a/src/components/sections/WorksSection.astro
+++ b/src/components/sections/WorksSection.astro
@@ -15,7 +15,7 @@ const { title, list } = Astro.props;
 	  	const { name, position, years, additionals, skills } = work;
 	  	return (
 		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr]">
-		  		<div>
+		  		<div class="print:(flex justify-between)">
 		  			<h3 class="font-semibold uppercase">{name}</h3>
 		  			<p>{years}</p>
 		  		</div>
