--- a/src/components/ui/Section.astro
+++ b/src/components/ui/Section.astro
@@ -8,8 +8,15 @@ interface Props {
 const { title, ariaLabel, className } = Astro.props;
 ---
 
-<section aria-label={ariaLabel} class:list={[ "px-container grid gap-y-4 md:grid-cols-[1fr_4fr] md:gap-x-1.5rem", className && className]}>
-  {title && <h2 class="font-bold leading-snug text-lg md:self-start bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent">{title}</h2>}
+<section aria-label={ariaLabel} class:list={[ 
+    "px-container grid gap-y-4", 
+    "md:(grid-cols-[1fr_4fr] gap-x-1.5rem)", 
+    className && className,
+    "print:(gap-y-0)"
+]}>
+  {title && (
+    <h2 class="font-bold leading-snug text-lg md:self-start bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent print:(text-lg)">{title}</h2>
+  )}
   <div class="d:col-start-2 md:col-end-3">
     <slot />
   </div>
