--- a/src/components/PrintBtn.astro
+++ b/src/components/PrintBtn.astro
@@ -4,4 +4,6 @@
   document.getElementById('print-btn')?.addEventListener('click', ()=> window.print());
 </script>
 
-<button id="print-btn" class="text-xl i-lucide-printer"></button>
+<button id="print-btn" class="w-full h-full flex items-center justify-center">
+  <span class="text-xl h-full text-xl i-lucide-printer" />
+</button>
