--- a/src/components/sections/PageFooter.astro
+++ b/src/components/sections/PageFooter.astro
@@ -8,11 +8,15 @@ const year = new Date().getFullYear();
 const { developer, license } = Astro.props;
 ---
 
-<footer class="px-container pt-20 pb-8 text-xs text-mute md:(grid, grid-cols-[1fr_4fr] gap-x-1.5rem) print:hidden">
-  <div class="md:col-start-2 md:col-end-3">
+<footer class:list={[
+  "px-container pt-20 pb-8 text-xs text-mute",
+  "md:(grid grid-cols-[1fr_4fr] gap-x-1.5rem)",
+  "print:hidden"
+]}>
+  <div class="md:(col-start-2 col-end-3)">
     Made with <span class="">&#10084;&#xFE0E;</span> {developer.name}
   </div>  
-  <div class="md:col-start-2 md:col-end-3">
+  <div class="md:(col-start-2 col-end-3)">
     ©{year}, <a class="underline underline-offset-2" href={license.link} target="_blank">{license.name}</a>, {license.author}. <a class="underline underline-offset-2" href="https://github.com/mrtoxas/cv"> <span>Show on</span> GitHub</a>  
   </div>  
 </footer>
