--- a/src/components/PrintBtn.astro
+++ b/src/components/PrintBtn.astro
@@ -1,9 +1,11 @@
 ---
+import { useTranslations } from '../i18n/ui';
+const t = useTranslations(Astro.currentLocale);
 ---
 <script>
   document.getElementById('print-btn')?.addEventListener('click', ()=> window.print());
 </script>
 
-<button id="print-btn" class="w-full h-full flex items-center justify-center">
+<button id="print-btn" title={t('bar.printBtn.title')} class="w-full h-full flex items-center justify-center">
   <span class="text-xl h-full text-xl i-lucide-printer" />
 </button>
