--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -10,7 +10,7 @@ const { fullname, position } = Astro.props;
 <header class:list={[
   "pt-10 pb-8 px-container",
   "md:(grid grid-cols-[1fr_4fr] gap-x-1.5rem pt-20 pb-16 items-center)",
-  "print:(pb-4)"
+  "print:(pb-4 pt-0)"
 ]}>
   <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto] items-center)">
     <h1 class:list={[
