--- a/src/components/sections/SkillsSection.astro
+++ b/src/components/sections/SkillsSection.astro
@@ -9,9 +9,9 @@ const { title, list } = Astro.props;
 ---
 
 <Section title={title} >
-  <div class="grid gap-y-6 print:gap-y-1">
+  <div class="grid gap-y-6 print:gap-y-0">
     {list.map((item) => (
-      <div class="grid gap-y-2 print:gap-1 print:flex">
+      <div class="grid gap-y-2 print:gap-0">
         <h3 class="font-semibold print:print:text-sm whitespace-nowrap">{item.title}</h3>
         <SkillList skills={item.list} />
       </div>
