--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -29,6 +29,7 @@ const description = t('page.meta.description');
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="robots" content="noindex">
     <meta name="description" content={description} />
     <title>{title}</title>
   </head>
