added base path

--- a/src/components/LangSelect.astro
+++ b/src/components/LangSelect.astro
@@ -2,9 +2,9 @@
 const locale = Astro.currentLocale;
 
 const links = [
-  { title: "English", path: "/en" },
-  { title: "Українська", path: "/ua" },
-  { title: "Русский", path: "/ru" },
+  { title: "English", path: "./en" },
+  { title: "Українська", path: "./ua" },
+  { title: "Русский", path: "./ru" },
 ];
 ---
 
