--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -31,6 +31,7 @@ const description = t('page.meta.description');
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="noindex">
     <meta name="description" content={description} />
+    <base href="/cv/">
     <title>{title}</title>
   </head>
   <body class="break-inside-avoid">
