--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -26,8 +26,8 @@ const description = t('page.meta.description');
 <html lang={locale} class="no-js pb-12 safe-area bg-background text-foreground text-[100%] print:text-[80%] md:pb-0 font-inter leading-relaxed antialiased">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover" />
     <meta name="generator" content={Astro.generator} />
     <meta name="robots" content="noindex">
     <meta name="description" content={description} />
