--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -9,13 +9,14 @@ const { fullname, position } = Astro.props;
 
 <header class:list={[
   "pt-10 pb-8 px-container",
-  "md:(grid grid-cols-[1fr_4fr] gap-x-1.5rem pt-20 pb-16 items-center)",
+  "lg:(grid grid-cols-[1fr_4fr] gap-x-1.5rem pt-20 pb-16 items-center)",
   "print:(pb-4 pt-0)"
 ]}>
   <div class="md:(grid col-start-2 col-end-3 grid-cols-[1fr_auto] items-center)">
     <h1 class:list={[
       "text-4xl font-bold leading-snug bg-gradient-to-r from-primary-start to-primary-end bg-clip-text text-transparent",
       "md:(col-start-1 col-end-2 text-5xl leading-normal)",
+      "lg:()",
       "print:(text-2xl)"
     ]}>{fullname}</h1>
     <p class="font-bold md:(col-start-1 col-end-2) print:(text-sm)">{position}</p>
