--- a/src/components/sections/PageFooter.astro
+++ b/src/components/sections/PageFooter.astro
@@ -14,7 +14,7 @@ const { developer, license } = Astro.props;
   "print:hidden"
 ]}>
   <div class="md:(col-start-2 col-end-3)">
-    Made with <span class="group-hover:text-danger group-hover:animate-pulse">&#10084;&#xFE0E;</span> {developer.name}
+    Made with <span class="group-hover:text-primary group-hover:animate-pulse">&#10084;&#xFE0E;</span> {developer.name}
   </div>  
   <div class="md:(col-start-2 col-end-3)">
     ©{year}, <a class="underline underline-offset-2" href={license.link} target="_blank">{license.name}</a>, {license.author}. <a class="underline underline-offset-2" href="https://github.com/mrtoxas/cv"> <span>Show on</span> GitHub</a>  
