--- a/src/components/sections/EducationSection.astro
+++ b/src/components/sections/EducationSection.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import Section from "../ui/Section.astro";
-import AdditionalsList from "../ui/AdditionalsList.astro";
+import Experience from "../ui/Experience.astro";
 
 type Props = CollectionEntry<"main">["data"]["education"];
 
@@ -9,21 +9,5 @@ const { title, list } = Astro.props;
 ---
 
 <Section title={title}>
-	<ul class="grid gap-y-6 md:gap-y-8 print:gap-y-2">
-	  {list.map((education) => {
-	  	const { name, years, degree, additionals } = education;
-	  	return (
-		  	<li class="grid gap-y-2 md:gap-x-12 md:grid-cols-[2fr_4fr] print:gap-y-0">
-		  		<div class="print:(flex justify-between items-center)">
-		  			<h3 class="font-semibold uppercase">{name}</h3>
-		  			<p>{years}</p>
-		  		</div>
-		  		<div class="grid gap-y-2 md:gap-y-1 print:gap-0">
-		  			<h4 class="font-semibold">{degree}</h4>
-		  			<AdditionalsList list={additionals} />
-		  		</div>
-		  	</li>
-	  	)
-	  })}
-  </ul>
+	<Experience list={list} />
 </Section>
