--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -31,6 +31,14 @@ const t = useTranslations(locale);
     <meta name="description" content={t('page.meta.description')} />
     <base href="/cv/">
     <title>{t('page.meta.title')}</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png">
+    <link rel="manifest" href="./fav/site.webmanifest">
+    <link rel="mask-icon" href="./fav/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./fav/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="icons/browserconfig.xml">
   </head>
   <body class="break-inside-avoid">
     {
