--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "../../layouts/Page.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 
 export async function getStaticPaths() {
@@ -16,4 +16,4 @@ export async function getStaticPaths() {
 
 ---
 
-<Page />
+<BaseLayout />
