--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "../layouts/Page.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<Page />
+<BaseLayout />
