--- a/src/pages/[locale]/portfolio.astro
+++ b/src/pages/[locale]/portfolio.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
+import PortfolioLayout from "../../layouts/PortfolioLayout.astro";
 
 export async function getStaticPaths() {
   const pages = await getCollection("main");
@@ -16,4 +16,4 @@ export async function getStaticPaths() {
 
 ---
 
-<BaseLayout />
+<PortfolioLayout />
