--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import ResumeLayout from "../layouts/ResumeLayout.astro";
 ---
 
-<BaseLayout />
+<ResumeLayout />
